Seeing as it's seemingly impossible to randomly select from a different array of images depending on screensize, and seeing as position:fixed doesn't work on mobile, my solution in to use landscape images that can be repeated seemlessly. On mobile they just repeat endlessly, on desktop they're fixed. Unfortunately they're all rather dark, but it was all I could find.

--- a/app/assets/stylesheets/layouts/_body.scss
+++ b/app/assets/stylesheets/layouts/_body.scss
@@ -4,6 +4,9 @@
   background-attachment: fixed;
 }
 
-@media (max-width: 800px) {
-  background-attachment: initial;
+@media(max-aspect-ratio: 1/1) {
+  .background {
+    background-size: 100vw 50vh;
+    background-repeat: repeat;
+  }
 }
